@@ -1,3 +1,8 @@
+2007-06-07  Ben Elliston  <bje@au.ibm.com>
+
+	* Makefile.tpl: Fix spelling error.
+	* Makefile.in: Regenerate.
+
 2007-06-04  Paolo Bonzini  <bonzini@gnu.org>
 
 	Sync with gcc:
